--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -138,8 +138,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IPqaEngine.h" />
+    <ClInclude Include="Interface\IPqaEngine.h" />
+    <ClInclude Include="Interface\IPqaEngineFactory.h" />
+    <ClInclude Include="Interface\PqaCommon.h" />
     <ClInclude Include="PqaCore.h" />
+    <ClInclude Include="PqaEngineBaseFactory.h" />
+    <ClInclude Include="PqaErrors.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -159,6 +163,8 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PqaCore.cpp" />
+    <ClCompile Include="PqaEngineBaseFactory.cpp" />
+    <ClCompile Include="PqaEngineFactorySelector.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
