--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="DoubleNumber.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PqaNumber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PqaErrors.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CpuEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
