--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="PqaNumber.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PqaException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CpuEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PqaException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
