--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <ClInclude Include="CpuEngine.h" />
     <ClInclude Include="DoubleNumber.h" />
+    <ClInclude Include="GapTracker.h" />
     <ClInclude Include="Interface\IPqaEngine.h" />
     <ClInclude Include="Interface\IPqaEngineFactory.h" />
     <ClInclude Include="Interface\PqaCommon.h" />
