--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="PqaException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GapTracker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
