Started implementing MaintenanceSwitch via SpinLock.

--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClCompile Include="PqaException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MaintenanceSwitch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
