--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Interface\SRSpinSync.h">
       <Filter>Header Files\Interface</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\SRFastManualResetEvent.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
