--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -66,6 +66,15 @@
     <ClInclude Include="MaintenanceSwitch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CETask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CESubtask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CESubtaskCompleter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -93,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MaintenanceSwitch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CETask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
