Added spin-lock statistics. Tweaked compiler options.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /ProbQA/PqaClient/x64
 /ProbQA/PqaCore/x64
 /ProbQA/SRPlatform/x64
+/ProbQA/PqaClient/Release
+/ProbQA/PqaCore/Release
+/ProbQA/Release
+/ProbQA/SRPlatform/Release
