--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -201,6 +201,8 @@
     <ClInclude Include="CESubtask.h" />
     <ClInclude Include="CESubtaskCompleter.h" />
     <ClInclude Include="CETask.h" />
+    <ClInclude Include="CETrainSubtaskDistrib.h" />
+    <ClInclude Include="CETrainTask.h" />
     <ClInclude Include="CpuEngine.h" />
     <ClInclude Include="DoubleNumber.h" />
     <ClInclude Include="GapTracker.h" />
