--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="CETrainSubtaskDistrib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InternalErrorHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -111,6 +114,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CETask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PqaErrorParams.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
