--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="Interface\SRLoggerFactory.h" />
     <ClInclude Include="Interface\SRLogStream.h" />
     <ClInclude Include="Interface\SRMacros.h" />
+    <ClInclude Include="Interface\SRMemPool.h" />
     <ClInclude Include="Interface\SRMessageBuilder.h" />
     <ClInclude Include="Interface\SRPlatform.h" />
     <ClInclude Include="Interface\SRReaderWriterSync.h" />
