--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="InternalErrorHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CETrainSubtaskAdd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
